--- a/mailtemplate.html
+++ b/mailtemplate.html
@@ -107,8 +107,8 @@
         </tr>
     </table>
     <p>Please review the request and click on one of the buttons below to indicate your decision:</p>
-    <a href="mailto:your@email.com?subject=Approval%20Granted&body=Dear%20[Your%20Name],%0D%0A%0D%0AThank%20you%20for%20your%20approval.%20The%20request%20has%20been%20approved.%0D%0A%0D%0ABest%20regards,%0D%0A[Recipient's%20Name]" class="button approve">Approve</a>
-    <a href="mailto:your@email.com?subject=Rejection%20Notice&body=Dear%20[Your%20Name],%0D%0A%0D%0AThank%20you%20for%20your%20consideration.%20The%20request%20has%20been%20rejected.%0D%0A%0D%0ABest%20regards,%0D%0A[Recipient's%20Name]" class="button reject">Reject</a>
+    <a href="mailto:tech@thestagings.com?subject=Approval%20Granted&body=Dear%20[Your%20Name],%0D%0A%0D%0AThank%20you%20for%20your%20approval.%20The%20request%20has%20been%20approved.%0D%0A%0D%0ABest%20regards,%0D%0A[Recipient's%20Name]" class="button approve">Approve</a>
+    <a href="mailto:tech@thestagings.com?subject=Rejection%20Notice&body=Dear%20[Your%20Name],%0D%0A%0D%0AThank%20you%20for%20your%20consideration.%20The%20request%20has%20been%20rejected.%0D%0A%0D%0ABest%20regards,%0D%0A[Recipient's%20Name]" class="button reject">Reject</a>
     <div class="footer">
         <p>Thank you for your prompt attention to this matter.</p>
         <p>Best regards,<br>[REQUESTER_NAME]</p>
