--- a/mailtemplate.html
+++ b/mailtemplate.html
@@ -107,11 +107,11 @@
         </tr>
     </table>
     <p>Please review the request and click on one of the buttons below to indicate your decision:</p>
-    <a href="mailto:tech@thestagings.com?subject=[APPROVE_SUBJECT]&body=Dear [REQUESTER_NAME],
+    <a href="mailto:tech@thestagings.com?subject=[APPROVE_TEXT]&body=Dear [REQUESTER_NAME],
 
 Thank you for your approval. The request has been approved.
 " class="button approve">Approve</a>
-    <a href="mailto:tech@thestagings.com?subject=[REJECT_SUBJECT]&body=Dear [REQUESTER_NAME],
+    <a href="mailto:tech@thestagings.com?subject=[REJECT_TEXT]&body=Dear [REQUESTER_NAME],
 
 Thank you for your consideration. The request has been rejected.
 " class="button reject">Reject</a>
