--- a/mailtemplate.html
+++ b/mailtemplate.html
@@ -107,14 +107,9 @@
         </tr>
     </table>
     <p>Please review the request and click on one of the buttons below to indicate your decision:</p>
-    <a href="mailto:tech@thestagings.com?body=Dear [REQUESTER_NAME],
-
-Thank you for your approval. The request has been approved.
+    <a href="mailto:your@email.com?subject=[APPROVE_TEXT]&body=Dear%20[RECIEVER_NAME],%0D%0A%0D%0AThank%20you%20for%20your%20approval.%20The%20request%20has%20been%20approved.%0D%0A%0D%0ABest%20regards,%0D%0A[Recipient_Name]"
 " class="button approve">Approve</a>
-    <a href="mailto:tech@thestagings.com?body=Dear [REQUESTER_NAME],
-
-Thank you for your consideration. The request has been rejected.
-" class="button reject">Reject</a>
+    <a href="mailto:your@email.com?subject=[REJECT_TEXT]%20Notice&body=Dear%20[RECIEVER_NAME],%0D%0A%0D%0AThank%20you%20for%20your%20consideration.%20The%20request%20has%20been%20rejected.%0D%0A%0D%0ABest%20regards,%0D%0A[Recipient_Name]"  class="button reject">Reject</a>
     <div class="footer">
         <p>Thank you for your prompt attention to this matter.</p>
         <p>Best regards,<br>[REQUESTER_NAME]</p>
