--- a/mailtemplate.html
+++ b/mailtemplate.html
@@ -107,7 +107,7 @@
         </tr>
     </table>
     <p>Please review the request and click on one of the buttons below to indicate your decision:</p>
-	[APPROVE_TEXT]
+	<p>[APPROVETEXT]</p>
 
     <div class="footer">
         <p>Thank you for your prompt attention to this matter.</p>
