--- a/mailtemplate.html
+++ b/mailtemplate.html
@@ -107,6 +107,10 @@
         </tr>
     </table>
     <p>Please review the request and click on one of the buttons below to indicate your decision:</p>
+	<br>
+	<p>[JOBURL]</p>
+	<br>
+	<br>
  	<a href="mailto:[TO_EMAIL]?subject=Approved%20[JOBNAME]%20[JOBID]%20BUILD&body=Dear%20[RECIEVER_NAME]%20,%0D%0A%0D%0AThank%20you%20for%20your%20approval.%20The%20request%20has%20been%20approved.%0D%0A%0D%0ABest%20regards,%0D%0A[Recipient_Name]" class="button approve">Approve</a>
     <a href="mailto:[TO_EMAIL]?subject=Rejected%20[JOBNAME]%20[JOBID]%20BUILD&body=Dear%20[RECIEVER_NAME]%20,%0D%0A%0D%0A%20The%20request%20has%20been%20rejected.%0D%0A%0D%0ABest%20regards,%0D%0A[Recipient_Name]"  class="button reject">Reject</a>
     <div class="footer">
